# open-smartwatch-os

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FakeArduino.cpp  FakeArduino.h  FakeArduinoWindowSDL.h  FakePrint.cpp  FakePrint.h  Fakegfxfont.h  Fakeglcdfont.c  Fakeglcdfont.h  Fakepgmspace.h  README.md  Readme.md  anim_doom_fire.cpp  anim_doom_fire.h  anim_doom_fire_old.cpp  anim_doom_fire_old.h  anim_firework.h  anim_matrix.h  anim_water_ripple.cpp  anim_water_ripple.h  composeScreen.sh  createScreenshot.sh  fetchScreen.sh  gfx_2d.h  gfx_2d_print.h  gfx_util.cpp  gfx_util.h  math_angles.cpp  math_angles.h  math_osm.cpp  math_osm.h  osm.cpp  osm.h  osm_render.cpp  (+8 more)
.github/: buildEverything.py  buildFirmware.py  getWorkflowMatrix.py  setMatrix.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: action_linux.yml  actions.yml  astyle.yml  release.yml  test-EMULATOR.yml  test-FEATURE.yml  test-OS.yml  test-OSW.yml  test-emulator.yml
anim/: p3dt_anim_doom_fire.h
docs/: config.yml
docs/firmware/: flags.md  getting_started.md  osw_os.md  support.md  troubleshooting.md
emulator/include/: Arduino.h  Arduino_Canvas_Graphics2D.h  Arduino_G.h  Arduino_GFX.h  CPU.h  DataTypes.h  Defines.h  Display.h  ESP.h  Emulator.hpp  FakeMe.h  FakePrint.h  Fakegfxfont.h  Fakeglcdfont.h  Fakepgmspace.h  HardwareSerial.h  IO.h  Preferences.h  RtcDS3231.h  Serial.h  String.h  WString.h  gfx_2d_print.h  nvs_flash.h
emulator/src/: Arduino.cpp  CPU.cpp  Display.cpp  ESP.cpp  Emulator.cpp  FakeMe.cpp  FakePrint.cpp  IO.cpp  Preferences.cpp  RtcDS3231.cpp  Serial.cpp  String.cpp  main.cpp  nvs_flash.cpp
esp32/: p3dt_esp32_cpu.h
example/: Readme.md
example/doom-fire/: main.cpp
example/perlin/: main.cpp
example/util/: FakeArduino.h  SDLWindow.h
example/watch-simple/: main.cpp
example/water/: main.cpp
examples/: .gitignore  CMakeLists.txt  Readme.md
examples/doom-fire/: CMakeLists.txt  main.cpp
examples/doom-fire-old/: main.cpp
examples/fireworks/: main.cpp
examples/osm/: CMakeLists.txt  main.cpp
examples/perlin/: CMakeLists.txt  main.cpp  math
examples/rotation/: main.cpp
examples/shapes/: CMakeLists.txt  main.cpp
examples/text/: main.cpp
examples/watch-simple/: CMakeLists.txt  main.cpp
examples/water/: CMakeLists.txt  main.cpp
fonts/: FreeSans11pt8b.h
gfx/: p3dt_gfx_2d.h  p3dt_gfx_util.h
img/icons/: .gitignore
include/: ArduinoGraphics2DCanvas.h  Arduino_Canvas_Graphics2D.h  OswAppDrawer.h  OswAppV1.h  OswAppV2.h  OswAppV2Compat.h  OswIcon.h  OswImage.h  OswLogger.h  OswProgressFeedback.h  OswSerial.h  config.h.example  config_defaults.h  debug_scani2c.h  gfx_2d.h  gfx_2d_license.txt  gfx_2d_print.h  gfx_util.h  globals.h  math_angles.h  math_osm.h  osm_render.h  osw_app.h  osw_app_fadein_display.h  osw_app_hello_world.h  osw_app_map.h  osw_app_pauls_watchface.h  osw_app_power_demo.h  osw_app_print_debug.h  osw_app_show_display_size.h  osw_app_watchface_demo.h  osw_config.h  osw_config_keys.h  osw_config_types.h  osw_defaultlauncher.h  osw_face.h  osw_hal.h  osw_launcher.h  osw_lua.h  osw_pins.h  (+6 more)
include/animations/: README.md  anim_doom_fire.h  anim_doom_fire_old.h  anim_firework.h  anim_matrix.h  anim_water_ripple.h
include/apps/: OswAppDrawer.h  OswAppV2Compat.h
include/assets/: .gitignore  bundle.min.css.gz.h  bundle.min.js.gz.h  index.html.gz.h  mwdu.h
include/devices/: OswDevice.h  bma400.h  bme280.h  bmi270.h  bmp581.h  ds3231mz.h  esp32.h  qmc5883l.h  qmc5883p.h  virtual.h
include/faces/: osw_analogface.h  osw_basicface.h  stopwatch.h
include/fonts/: DS_DIGI12pt7b.h  DS_DIGI30pt7b.font.url.txt  DS_DIGI30pt7b.h  FreeMonoBold12pt7b.h  FreeMonoBold18pt7b.h  FreeMonoBold24pt7b.h  FreeMonoBold9pt7b.h  FreeSans11pt8b.h  FreeSerifItalic18pt7b.h  KRfont.h  KSFont.h  Picopixel.h  Readme.txt  Roboto_Condensed_Light_21.h  Roboto_Condensed_Light_75.h  ows_font_CEI_8859-15.cpp  roboto_black_79.h
include/hal/: buttons.h  devices.h  environment.h  osw_filesystem.h
include/icon/: OswIconProgmem.h
include/launcher/: osw_plauncher.h
include/locales/: README.md  cs-CZ.h  de-DE.h  en-US.h  fr-FR.h  hu-HU.h  it-IT.h  ko-KR.h
include/overlays/: overlays.h
include/platform/: EMULATOR.h  FLOW3R_C3CAMP_2023.h  GPS_EDITION_V3_1.h  LIGHT_EDITION_V3_2.h  LIGHT_EDITION_V3_3.h  LIGHT_EDITION_V4_0.h  MINIMAL.h  PAULS_WATCH_REV05_RGB.h  README.md
include/services/: Notification.h  NotifierClient.h  OswServiceManager.h  OswServiceTaskBLECompanion.h  OswServiceTaskBLEServer.h  OswServiceTaskConsole.h  OswServiceTaskCore.h  OswServiceTaskExample.h  OswServiceTaskGPS.h  OswServiceTaskMemMonitor.h  OswServiceTaskNotifier.h  OswServiceTaskRawScreenServer.h  OswServiceTaskWebserver.h  OswServiceTaskWiFi.h  OswServiceTasks.h  companionservice.h  servicemanager.h  services.h
include/sprites/: circle_sprite.h  rectangle_sprite.h  renderer.h  shape_sprite.h  sprite.h  text_sprite.h  triangle_sprite.h
include/widgets/: OswProgressWidget.h
lib/: .gitignore
lib/Arduino_GFX/: Arduino_Canvas.cpp  Arduino_Canvas.h  Arduino_Canvas_Indexed.cpp  (+53 more)
screenshotScript/: composeScreen.sh
scripts/: install.py  requirements.txt  update.sh
src/: ArduinoGraphics2DCanvas.cpp  OswAppDrawer.cpp  OswAppV2.cpp  OswAppV2Compat.cpp  OswIcon.cpp  OswImage.cpp  OswLogger.cpp  OswSerial.cpp  gfx_2d.cpp  gfx_util.cpp  globals.cpp  main.cpp  math_angles.cpp  math_osm.cpp  math_tables.cpp  osm_render.cpp  osw_app_autumn.cpp  osw_app_ble_media_ctrl.cpp  osw_app_dnatilt.cpp  osw_app_fadein_display.cpp  osw_app_fireworks.cpp  osw_app_hello_world.cpp  osw_app_map.cpp  osw_app_pauls_watchface.cpp  osw_app_power_demo.cpp  osw_app_print_debug.cpp  osw_app_runtime_test.cpp  osw_app_show_display_size.cpp  osw_app_watchface_demo.cpp  osw_app_water_level.cpp  osw_config.cpp  osw_config_keys.cpp  osw_config_types.cpp  osw_defaultlauncher.cpp  osw_hal.cpp  osw_hal_buttons.cpp  osw_hal_display.cpp  osw_hal_gps.cpp  osw_hal_power.cpp  osw_hal_sd.cpp  (+8 more)
time/: p3dt_time_util.h
(+501 files in other folders)
